deploy heroku zentomic notifier node better
